<resources>
    <string name="app_name">HASO Food App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="rs_amount">Rs %s</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="haso_food_app">Haso Food App</string>
    <string name="order_food_in_iit_bhilai_campus">Order Food In IIT Bhilai Campus</string>
    <string name="font_lobster_regular">\@font/Lobster-Regular</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign In</string>
    <string name="haso_food_app1">HASO Food App</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="already_registered">Already Registered?</string>
    <string name="don_t_have_an_account">Don\'t Have An Account?</string>
    <string name="daily_meal">Daily Meal</string>
    <string name="favourite">Favourite</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_cart">My Cart</string>
    <string name="s_t_c">S T C</string>
    <string name="navigation_header">Navigation Header</string>
    <string name="HASO">h_a_s_o</string>
    <string name="h_a_s_o">H.A.S.O.</string>
    <string name="haso_iitbhilai_ac_in">haso@iitbhilai.ac,in</string>
    <string name="log_out">Log Out</string>
    <string name="search_your_food">Search your food!</string>
    <string name="hello_haso">Hello HASO</string>
    <string name="what_on_your_mind_today">What on your mind today?</string>
    <string name="pizza">Pizza</string>
    <string name="todo">TODO</string>
    <string name="product_name">Product Name</string>
    <string name="_5_0">5.0</string>
    <string name="_10_00_23_00">10:00 - 23:00</string>
    <string name="min_45">Min - Rs.45</string>
    <string name="dinner">Dinner</string>
    <string name="description_description_description">Description Description Description</string>
    <string name="discount">Discount</string>
    <string name="name">Name</string>
    <string name="_120_0">120.0</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="_10_delicious_weekend_ndinner_recipies">10 Delicious Weekend \nDinner Recipies</string>
    <string name="view_more">View More</string>
    <string name="iit_bhilai_s_favourite_and_testy_food_is_here">IIT Bhilai\'s favourite and testy food is here!</string>
    <string name="description_here">Description Here</string>
    <string name="food_name">Food Name</string>
    <string name="total">Total</string>
    <string name="rs_420_69">Rs. 420.69</string>
    <string name="make_order">Make Order</string>
    <string name="_190_63">190.63</string>
    <string name="order_now">Order Now</string>
    <string name="_1">1</string>
    <string name="rs_420">Rs. 420</string>
    <string name="_420">420</string>
    <string name="rate">Rate :</string>
    <string name="add_money">Add Money</string>
    <string name="withdraw_money">Withdraw Money</string>
    <string name="balance">Balance :</string>
    <string name="wallet">Wallet</string>
    <string name="big_description">Description Description Description Description Description Description Description Description Description Description Description Description Description Description Description Description Description Description Description Description Description Description Description Description Description Description Description Description Description Description Description Description Description Description Description Description Description Description Description Description Description Description Description Description Description Description Description Description</string>
    <string name="_420_0">420.0</string>
    <string name="order_history">Order History</string>
</resources>