<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_svgrepo_com"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_daily_meal"
            android:icon="@drawable/meal"
            android:title="@string/daily_meal" />
        <item
            android:id="@+id/nav_favourite"
            android:icon="@drawable/favourite"
            android:title="@string/favourite" />
        <item
            android:id="@+id/nav_my_cart"
            android:icon="@drawable/cart"
            android:title="@string/my_cart" />
        <item
            android:id="@+id/nav_wallet"
            android:icon="@drawable/ic_wallet"
            android:title="@string/wallet" />

    </group>
</menu>