<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.hasofoodapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_daily_meal"
        android:name="com.example.hasofoodapp.ui.dailymeal.FragmentGallery"
        android:label="@string/daily_meal"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_favourite"
        android:name="com.example.hasofoodapp.ui.favourite.SlideshowFragment"
        android:label="@string/favourite"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_my_cart"
        android:name="com.example.hasofoodapp.ui.MyCartFragment"
        android:label="@string/my_cart"
        tools:layout="@layout/fragment_my_cart" />
    <fragment
        android:id="@+id/nav_wallet"
        android:name="com.example.hasofoodapp.ui.WalletFragment.WalletFragment"
        android:label="@string/wallet"
        tools:layout="@layout/fragment_wallet" />

</navigation>