<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/balanceTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/balance"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"/>

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="14dp"
        android:layout_height="15dp"
        android:src="@drawable/inr"
        android:layout_below="@id/balanceTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
 />

    <TextView
        android:id="@+id/bottom_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_120_0"
        android:textColor="@color/purple_700"
        android:textStyle="bold"
        android:layout_below="@id/imageView6"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />

    <Button
        android:id="@+id/addMoneyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_money"
        android:layout_below="@+id/bottom_price"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/withdrawMoneyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/withdraw_money"
        android:layout_below="@+id/addMoneyButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
 />
</RelativeLayout>

