<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/detailed_img"
            android:layout_width="130dp"
            android:layout_height="110dp"
            android:layout_margin="10dp"
            android:src="@drawable/coffe"
            android:scaleType="centerCrop"
            app:riv_corner_radius="24dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="4dp">
            <TextView
                android:maxLines="1"
                android:singleLine="true"
                android:textStyle="bold"
                android:textSize="24sp"
                android:text="@string/name"
                android:textColor="@color/black"
                android:id="@+id/detailed_name"
                android:fontFamily="@font/lobster"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/detailed_des"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lobster"
                android:text="@string/description_description_description"
                android:ellipsize="end"
                android:maxLines="2"
                android:textColor="@color/black"
                android:singleLine="true"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="4dp">
                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:src="@drawable/star_"
                    android:layout_marginTop="2dp"
                    app:tint="@color/purple_500"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_5_0"
                    android:textStyle="bold"
                    android:id="@+id/detailed_rating"
                    />

                <ImageView
                    android:src="@drawable/time_svgrepo_com"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="2dp"
                    />
                <TextView
                    android:id="@+id/detailed_timing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/_10_00_23_00"
                    android:textStyle="bold"
                    />
            </LinearLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:src="@drawable/inr"
                    app:layout_constraintBottom_toBottomOf="@id/detailed_price"
                    app:layout_constraintTop_toTopOf="@id/detailed_price"
                    app:tint="@color/purple_500" />

                <TextView
                    android:id="@+id/detailed_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_120_0"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/imageView6"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:layout_width="97dp"
                    android:layout_height="wrap_content"
                    android:text="@string/add_to_cart"
                    android:textAllCaps="false"
                    android:textSize="10sp"
                    android:textStyle="bold"
                    android:layout_marginEnd="2dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>