<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mediumGray"
    tools:context=".ui.home.HomeFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/editText3"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:layout_marginStart="10dp"
            android:autofillHints=""
            android:background="@drawable/search_bg"
            android:drawableEnd="@drawable/search_svgrepo_com"
            android:drawablePadding="9dp"
            android:fontFamily="@font/lobster"
            android:hint="@string/search_your_food"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/search_bg"
            android:contentDescription="@string/todo"
            android:padding="10dp"
            android:src="@drawable/person_svgrepo_com"
            app:layout_constraintBottom_toBottomOf="@+id/editText3"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:fontFamily="@font/lobster"
            android:text="@string/hello_haso"
            android:textSize="35sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editText3" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:fontFamily="@font/lobster"
            android:text="@string/what_on_your_mind_today"
            app:layout_constraintStart_toStartOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/home_hor_rec"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/home_ver_rec"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:layout_marginTop="6dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/home_hor_rec" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>